<resources>
    <string name="app_name">星讯</string>

    <string name="identification">账号</string>
    <string name="password">密码</string>
    <string name="password_sure">确认密码</string>
    <string name="login">登录</string>
    <string name="sure">确认</string>
    <string name="return_aty">返回</string>
    <string name="register">注册</string>
    <string name="send">发送</string>
    <string name="name">昵称</string>
    <string name="signature">个性签名</string>
    <string name="age">年龄</string>
    <string name="avatar">头像</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="action_settings">Settings</string>
    <string name="request_message">发送您的验证信息</string>
    <string name="message">信息</string>
    <string name="time">时间</string>
    <string name="self_information">个人资料</string>
    <string name="add_friend">添加朋友</string>
    <string name="btn_avatar">选择\n头像</string>
    <string name="logout">退出登录</string>
    <string name="unknown_model">未知型号</string>
    <string name="friend_list">朋友列表</string>
    <string name="chat_view">聊天界面</string>
    <string name="phone">手机型号</string>
    <string name="community">社区动态</string>
    <string name="pull_more">下拉更多</string>
    <string name="send_posting">发帖</string>
    <string name="remind_account">请输入6~20位的账号</string>
    <string name="remind_password">请输入6~20位的密码</string>
    <string name="remind_password_sure">请确认您的输入密码</string>
    <string name="remind_name">请输入昵称</string>
    <string name="remind_signature">请输入个性签名</string>
    <string name="remind_age">请输入年龄</string>
</resources>