<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Login">
    <item android:id="@+id/actionbar_add_friend"
        android:title="@string/add_friend"
        android:icon="@drawable/actionbar_add_icon"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/actionbar_self_information"
        android:title="@string/self_information"
        app:showAsAction="never"
        android:icon="@drawable/self"
        android:orderInCategory="100"/>
    <item android:id="@+id/actionbar_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="100"/>
</menu>