<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_toolbar"
        android:background="#AF3F34">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:background="@drawable/round_button"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="2sp"
                android:text="@string/logout"
                android:id="@+id/bar_logout"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:background="@drawable/round_button"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="2sp"
                android:text="@string/self_information"
                android:id="@+id/bar_self"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/bar_logout"
                android:layout_toStartOf="@+id/bar_logout" />

            <Button
                android:background="@drawable/round_button"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="2sp"
                android:text="@string/add_friend"
                android:id="@+id/bar_add"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/bar_self"
                android:layout_toStartOf="@+id/bar_self" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#AF3F34"
        android:id="@+id/bottom_menu">
        <Button
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:text="@string/friend_list"
            android:id="@+id/btn_friend"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:text="@string/chat_view"
            android:id="@+id/btn_chat" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:id="@+id/fragment_pager"
        android:layout_above="@+id/bottom_menu"
        android:layout_below="@+id/main_toolbar"/>

</RelativeLayout>
