<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/identification"
        android:id="@+id/t_identification"
        android:textSize="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password"
        android:id="@+id/t_password"
        android:textSize="36dp"
        android:layout_below="@+id/t_identification"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_identification"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/t_identification"
        android:layout_toEndOf="@+id/t_identification" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_identification"
        android:layout_alignLeft="@+id/et_identification"
        android:layout_alignStart="@+id/et_identification" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26dp"
        android:id="@+id/b_login"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="26dp"
        android:id="@+id/b_register"
        android:layout_below="@+id/b_login"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
