<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:id="@+id/main_toolbar"
        android:background="#ff1b1b1b"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/app_name"
                android:layout_marginLeft="10sp"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="250sp"
        android:layout_height="350sp"
        android:background="#19000000"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/login_user_avatar"
            android:layout_width="72sp"
            android:layout_height="72sp"
            fresco:roundAsCircle="true"
            fresco:backgroundImage="@color/buttonColor"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/identification"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:paddingBottom="3sp"
            android:id="@+id/t_account"
            android:gravity="bottom"
            android:layout_below="@+id/login_user_avatar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="20sp"/>

        <com.example.samsung.Others.LineEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_account"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:background="@null"
            android:paddingBottom="1sp"
            android:paddingLeft="5sp"
            android:layout_alignBottom="@+id/t_account"
            android:layout_toRightOf="@+id/t_account"
            android:layout_toEndOf="@+id/t_account"
            android:layout_marginRight="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:paddingBottom="3sp"
            android:gravity="bottom"
            android:id="@+id/t_password"
            android:layout_below="@+id/t_account"
            android:layout_alignLeft="@+id/t_account"
            android:layout_alignStart="@+id/t_account" />

        <com.example.samsung.Others.LineEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:background="@null"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:paddingBottom="1sp"
            android:paddingLeft="5sp"
            android:layout_below="@+id/t_account"
            android:layout_alignLeft="@+id/et_account"
            android:layout_alignStart="@+id/et_account"
            android:layout_alignRight="@+id/et_account"
            android:layout_alignEnd="@+id/et_account" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:text="@string/login"
            android:textColor="#ffffffff"
            android:background="@drawable/round_button"
            android:id="@+id/b_login"
            android:layout_below="@+id/t_password"
            android:layout_alignLeft="@+id/t_password"
            android:layout_alignStart="@+id/t_password"
            android:layout_marginTop="35dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:text="@string/register"
            android:textColor="#ffffffff"
            android:id="@+id/b_register"
            android:background="@drawable/round_button"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:layout_alignTop="@+id/b_login"
            android:layout_alignRight="@+id/et_password"
            android:layout_alignEnd="@+id/et_password" />
    </RelativeLayout>

</RelativeLayout>
